# fitnesbot

./: __main__.py  config.py  create_tables.sql  pyproject.toml  query.sql  requirements.txt
api/: __init__.py  user.py  webhook.py
app/: webhook.py
bot/callbacks/: callback_food_list.py  pagination.py  sport_food_supplements_list.py  spotting_exercises_call.py  training_at_home.py  training_from_athletes.py
bot/handlers/: foodcount.py  my_account.py  products.py  user_command.py
bot/keybords/: builders.py  fabrics.py  inline.py
bot/middlewares/: register_check.py
bot/mini_app/: mini_apps_handlers.py
bot/utils/: func.py  states.py
data/: database.py
database/: database.py
fitnesbot/: __init__.py  runbot.py
fitnesbot/callback_handlers/: callback_food_list.py  my_activity_tracker.py  my_workout_time.py  pagination.py  sport_food_supplements_list.py  spotting_exercises_call.py  training_at_home.py  training_from_athletes.py
fitnesbot/callbacks/: callback_food_list.py  sport_food_supplements_list.py  training_at_home.py  training_from_athletes.py
fitnesbot/filters/: is_admin.py
fitnesbot/handlers/: foodcount.py  my_account.py  nutrition.py  products.py  user_command.py
fitnesbot/keybords/: builders.py  fabrics.py  inline.py
fitnesbot/middlewares/: register_check.py
fitnesbot/mini_app/: mini_apps_handlers.py
fitnesbot/utils/: basemodel.py  func.py  states.py
tests/: conftest.py  utils.py
tests/test_handlers/: test_my_account.py  test_user_commands.py
web/static/: style.css  style_disease.css
web/templates/: disease.html  food.html  (+1 more)
